# udaan.ai

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.sql
api/: README.md  requirements.txt
api/app/: main.py  routes.py
api/app/services/: college_api.py
app/: auth.py  db.py  main.py  models.py
app/agents/: college_agent.py  profile_agent.py  quiz_agent.py  recommendation_agent.py  timeline_agent.py
app/routes/: auth.py  colleges.py  profile.py  quiz.py  recommend.py  timeline.py
scripts/: test_api.sh
